--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -33,7 +33,7 @@ a {
 	border-bottom: 1px solid #4e4e4e;
 	z-index: 200;
 	position: fixed; top: 0; left: 0;
-	background: #161e26;
+	background: #181b1e;
 	width: 100%;
 
 
@@ -41,7 +41,7 @@ a {
 		color: white;
 		text-transform: uppercase;
 		margin: 0 8px 0 8px;
-		font-size: 11px;
+		font-size: 14px;
 		position: relative; bottom: 0px;
 		border-left: 1px solid white;
 		padding: 0 15px 0 15px;
@@ -68,7 +68,7 @@ a {
 		background: asset-url('navbar-profile.png') no-repeat left top;
 		height: 28px;
 
-		a { border: none; color: $scope_blue; position: relative; bottom: 5px;}
+		a { border: none; color: $scope_blue; position: relative; bottom: 5px; font-size: 11px; }
 	}
 
 	.nav-search {
