--- a/app/views/movies/find.html.haml
+++ b/app/views/movies/find.html.haml
@@ -110,8 +110,17 @@
 	/ 	%span.blue> 0
 	/ 	PE
 
-	/ %img{ src: '/assets/finder-found-picto.png'}
-	/ .found Nous vous conseillons
+	
+
+	.line-left
+	.line-right
+	.find-another
+		Déjà vu ?
+		%br
+		Autre propositon
+
+	%img{ src: '/assets/finder-found-picto.png'}
+	.found Nous vous conseillons
 
 	%h1.movie-title.with-font
 		= @movie.title
@@ -154,3 +163,9 @@
 	/ %a.movie-new-search{ href: find_movies_path }
 	/ 	nouvelle recherche
 
+
+
+.scroll-slide.scroll-slide-left-a
+.scroll-slide.scroll-slide-left-b
+.scroll-slide.scroll-slide-right-a
+.scroll-slide.scroll-slide-right-b
