--- a/app/views/layouts/tunnel.html.haml
+++ b/app/views/layouts/tunnel.html.haml
@@ -17,9 +17,12 @@
 
 			= link_to 'Les films', :movies
 
-			= link_to 'On trouve pour vous', :find_movies
+			= link_to 'On trouve pour vous', :find_movies, :class => 'active'
 
 			= link_to "L'Application", nil
+
+			.current.current-find
+
 
 			.nav-search
 				%form.search-form{ action: search_movies_path, method: :get }
@@ -30,7 +33,7 @@
 				- if current_user
 					= link_to 'Déconnexion', signout_path, id: 'sign_out'
 				- else
-					= link_to 'Inscription', login_path, id: 'sign_in'
+					= link_to "S'identifier", login_path, id: 'sign_in'
 
 
 		= yield
