--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -19,11 +19,28 @@ body, html {
 	background: #000 asset-url('home-bg.png') no-repeat center center;
 	background-size: cover;
 
+	.home-top {
+		width: 100%; height: 180px;
+		background: #181b1e;
+	}
+
+	.home-bottom {
+		width: 100%; height: 230px;
+		background: #181b1e asset-url('page-layout-bottom.png') repeat-x center 105px;
+		position: absolute; bottom: 0;
+
+		.home-actions {
+			background:  #181b1e;
+			width: 750px;
+			margin-top: 100px;
+		}
+	}
+
 	.home-title {
 		width: 600px;
 		text-align: center;
-		margin: 120px auto 0 auto;
-		font-size: 110px;
+		margin: 40px auto 0 auto;
+		font-size: 70px;
 
 		a { color: white; }
 	}
@@ -31,7 +48,7 @@ body, html {
 	.home-subtitle {
 		@extend .home-title;
 		margin-top: 0px;
-		font-size: 20px;
+		font-size: 14px;
 		color: #7a7c83;
 		
 		text-transform: uppercase;
@@ -43,7 +60,7 @@ body, html {
 
 	.home-actions {
 		text-transform: uppercase;
-		width: 600px;
+		width: 800px;
 		margin: 80px auto 0 auto;
 		text-align: center;
 
@@ -61,9 +78,11 @@ body, html {
 
 	.button-link {
 		display: inline-block;
-		width: 220px;
-		margin: 0 20px 0 20px;
+		width: 160px;
+		margin: 0 30px 0 30px;
 		font-size: 12px;
+		font-weight: bold;
+		height: 12px; padding-top: 8px;
 	}
 
 	.home-username {
