--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,13 +1,14 @@
 .container.home
-	%h1.home-title.with-font
-		%a{ href: root_path }
-			SC
-			%span.blue> 0
-			PE
+	.home-top
+		%h1.home-title.with-font
+			%a{ href: root_path }
+				SC
+				%span.blue> 0
+				PE
 
-	%h3.home-subtitle L'oeil ouvert sur le monde
+		%h3.home-subtitle L'oeil ouvert sur le monde
 
-	%p.home-intro Scope est un site de visionnage de films en streaming proposant d’augmenter l’expérience du 7ème art en synchronisant l’interface web et les supports mobiles, via l’application SCOPE.
+	/ %p.home-intro Scope est un site de visionnage de films en streaming proposant d’augmenter l’expérience du 7ème art en synchronisant l’interface web et les supports mobiles, via l’application SCOPE.
 
 	.home-actions
 		- if not current_user
@@ -24,6 +25,9 @@
 			%a{ href: signout_path, id: 'sign_out', class: 'blue' }
 				Déconnexion
 
-	.home-actions
-		= link_to 'On vous trouve un film', :find_movies, class: 'button-link'
-		= link_to 'Accès direct', :movies, class: 'button-link'
+	.home-bottom	
+		.home-actions
+			= link_to 'Accès direct', :movies, class: 'button-link'
+			= link_to 'On vous trouve un film', :find_movies, class: 'button-link'
+			= link_to "L'application", :find_movies, class: 'button-link'
+			
