--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -61,7 +61,7 @@ body, html {
 	.home-actions {
 		text-transform: uppercase;
 		width: 800px;
-		margin: 80px auto 0 auto;
+		margin: 10% auto 0 auto;
 		text-align: center;
 
 		a#sign_in {
