--- a/app/views/movies/find.html.haml
+++ b/app/views/movies/find.html.haml
@@ -3,7 +3,7 @@
 		.finder-subtitle Trouvons un film selon votre humeur
 		%h1.finder-title.with-font Vous avez besoin...
 
-		%a.quit{ href: root_path, title: 'Annuler ma recherche' }
+		/ %a.quit{ href: root_path, title: 'Annuler ma recherche' }
 		
 		.mood-line
 			.line
@@ -174,3 +174,8 @@
 .scroll-slide.scroll-slide-left-b
 .scroll-slide.scroll-slide-right-a
 .scroll-slide.scroll-slide-right-b
+
+.notice-display.notice-display-a
+.notice-display.notice-display-b
+
+.scroll-slide-next
