--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -10,12 +10,12 @@
 
 	/ %p.home-intro Scope est un site de visionnage de films en streaming proposant d’augmenter l’expérience du 7ème art en synchronisant l’interface web et les supports mobiles, via l’application SCOPE.
 
-	.home-actions
+	.home-actions.login-form
 		- if not current_user
 			%img{ src: image_path('/assets/profile.png') }
-			%span.home-username Nouveau ?
+			%span.home-username
 			%a{ href: '/auth/facebook', id: 'sign_in', class: 'blue' }
-				Se connecter avec Facebook
+				Inscription rapide
 		- else
 			%img{ src: image_path('/assets/profile-picture-mask.png'), style: "background-image: url(http://graph.facebook.com/#{current_user.uid}/picture?type=normal); background-position: center;" }
 			
@@ -30,4 +30,74 @@
 			= link_to 'Accès direct', :movies, class: 'button-link'
 			= link_to 'On vous trouve un film', :find_movies, class: 'button-link'
 			= link_to "L'application", :find_movies, class: 'button-link'
-			
+
+		.go-prez En savoir plus
+
+
+.container.prez.contener
+	%header
+		%img{src: "assets/logo.png"}
+
+	%section#trailler
+		%h1 LE CINÉMA AUGMENTÉ
+		%iframe{allowfullscreen: "", frameborder: "0", height: "449", mozallowfullscreen: "", src: "//player.vimeo.com/video/90796762?title=0&byline=0&portrait=0&badge=0", webkitallowfullscreen: "", width: "800"}
+	%section#concept
+		.picto
+			%img{src: "assets/concept.png"}
+		%h1 UN SYSTÈME DE DOUBLE ÉCRAN
+		%h2 Une interface web pour regarder le film,et une application mobile pour créer l’interactivité.Lorsqu’une icône apparait sur l’écran du film,une interaction à lieu sur l’application mobile.
+	%section#notification
+		.picto
+			%img{src: "assets/notif.png"}
+		%h1
+			LES NOTIFICATIONS :
+			%br>
+			Du contenu ludique additionnel en temps réel
+		%h2
+			Pour comprendre le film.
+			%br>
+			Pour prolonger le divertissement.
+			%br>
+			Pour apprendre sur l’histoire du cinéma et sur le monde.
+			%br>
+			Pour ne pas décrocher.
+			%br
+	%section#notice
+		%h1 LES NOTICES DE CONTENU
+		%h2
+			A chaque notification, une notice. Elle se compose ainsi :
+			%br> • 1 symbole qui donne le genre
+			%br> • 1 message concis, à l’image d’un tweet
+			%br> • 1 illustration
+			%br> • 1vers la documentation complète
+	%section#documentation
+		.picto
+			%img{src: "assets/doc.png"}
+		%h1 UNE DOCUMENTATION INTÉGRÉE AU DEUX INTERFACES.
+		%h2
+			Une documentation interactive faisant le lien entre les séquences du film et l'histoire du monde.
+			%br
+			%br
+			Retrouvez la avant, pendant et après le film.
+	%section#interface
+		%h1 UNE INTERFACE SIMPLE ET INTUITIVE
+		%h2 Pour saisir les informations rapidement Et obtenir efficacement des réponses à ses questions, tout en restant accroché au film
+	%section#equipe
+		.beaugoss
+			%h1 Léonard Hetsch
+			%h2
+				Développeur
+				%br> leo.hetsch@gmail.com
+		.beaugoss
+			%h1 Sylvain Pouyet
+			%h2
+				Designer
+				%br> sylvain.pouyet@gmail.com
+	.clear
+
+	%section#thank
+		%h1 REMERCIEMENT
+		%h2
+			MAZILU Léna, MENIA Thomas, FICARA Véronique, AUDOUX Thierry et NYEKI Catherine
+
+	.clear
