--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -22,18 +22,6 @@
 
 }
 
-@font-face {
-    font-family: 'Aller';
-    src: asset-url('aller_lt-webfont.eot');
-    src: asset-url('aller_lt-webfont.eot?#iefix') format('embedded-opentype'),
-         asset-url('aller_lt-webfont.woff') format('woff'),
-         asset-url('aller_lt-webfont.ttf') format('truetype'),
-         asset-url('aller_lt-webfont.svg#aller_lightregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 
 @font-face {
     font-family: 'Aller-Bd';
@@ -45,4 +33,14 @@
     font-weight: normal;
     font-style: normal;
 
+}
+
+@font-face {
+    font-family: "aller_it";
+    src: asset-url('aller_it.ttf');
+}
+
+@font-face {
+    font-family: "aller_light";
+    src: asset-url('aller_light.ttf');
 }
