--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -202,7 +202,7 @@ div.movie-more {
 
 .movie-found {
 	position: absolute;
-	left: 360%; top: 0;
+	left: 300%; top: 0;
 
 	.movie-author, .movie-year { border: none; padding: 0; font-size: 16px; }
 	.movie-author { font-size: 26px; }
@@ -360,8 +360,8 @@ div.movie-more {
 }
 
 .finder-mood { position: absolute; left: 0%;  top: 0; }
-.finder-movies { position: absolute; left: 120%;  top: 0; }
-.finder-facts { position: absolute; left: 240%; top: 0; }
+.finder-movies { position: absolute; left: 100%;  top: 0; }
+.finder-facts { position: absolute; left: 200%; top: 0; }
 
 .player-wrapper {
 	width: 100%;
@@ -434,4 +434,28 @@ div.movie-more {
 	bottom: -100%;
 	background: asset-url('scroll-slide-right-b.png') no-repeat;
 	background-size: cover;
+}
+
+.notice-display {
+	width: 100%;
+	height: 300px;
+	position: fixed; top: 32%; left: 0;
+	z-index: 145;
+	display: none;
+}
+
+.notice-display-a {
+	background: asset-url('notice-a.png') no-repeat center;
+}
+.notice-display-b {
+	background: asset-url('notice-b.png') no-repeat center;
+}
+
+.scroll-slide-next {
+	width: 100%;
+	height: 80px;
+	background: asset-url('scroll-next.png') no-repeat center;
+	position: fixed; top: 70%; left: 0;
+	z-index: 145;
+	display: none;
 }
