--- a/app/views/movies/find.html.haml
+++ b/app/views/movies/find.html.haml
@@ -111,6 +111,7 @@
 	/ 	PE
 
 	.hidden-nav
+		.hidden-nav-title.with-font Metropolis
 		.hidden-nav-wrapper
 			%a.doc{ href: documentation_movie_path(@movie) } 
 			%a.watch{ href: watch_movie_path(@movie) } 
@@ -160,7 +161,6 @@
 				%p En descendant dans la ville basse pour la retrouver, il découvre l’atroce vie infligé aux ouvriers.
 
 			.discover-more
-				%a{ href: '#trailer' } Découvrir
 
 		.trailer#trailer
 		
