--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -29,9 +29,9 @@
 		.home-actions
 			= link_to 'Accès direct', :movies, class: 'button-link'
 			= link_to 'On vous trouve un film', :find_movies, class: 'button-link'
-			= link_to "L'application", :find_movies, class: 'button-link'
+			= link_to "L'application", :application, class: 'button-link'
 
-		.go-prez En savoir plus
+		.go-prez
 
 
 .container.prez.contener
