--- a/app/views/movies/find.html.haml
+++ b/app/views/movies/find.html.haml
@@ -47,7 +47,7 @@
 
 			.controls
 				.no{ onclick: 'finderShiftFact(); finderPushFact();'} non
-				.not-seen{ onclick: 'finderShiftMovie(); finderPushMovie();'} changer
+				.not-seen{ onclick: 'finderShiftFact(); finderPushFact();'} changer
 				.yes{ onclick: 'finderShiftFact(); finderPushFact();'} oui
 
 			.circle-wrapper
@@ -168,7 +168,12 @@
 	/ %a.movie-new-search{ href: find_movies_path }
 	/ 	nouvelle recherche
 
-
+.related-bg.inglorious-bg
+.related-bg.element-bg
+.related-bg.blade-bg
+.related-bg.curiosity-bg
+.related-bg.foxconn-bg
+.related-bg.google-bg
 
 .scroll-slide.scroll-slide-left-a
 .scroll-slide.scroll-slide-left-b
