--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -422,28 +422,28 @@ div.movie-more {
 .scroll-slide-left-a {
 	left: 0;
 	top: -95%;
-	background: asset-url('scroll-slide-left-a.png') no-repeat;
+	background: asset-url('scroll-slide-left-a.jpg') no-repeat center top;
 	background-size: cover;
 }
 
 .scroll-slide-left-b {
 	left: 0;
 	top: -95%;
-	background: asset-url('scroll-slide-left-b.png') no-repeat;
+	background: asset-url('scroll-slide-left-b.jpg') no-repeat center top;
 	background-size: cover;
 }
 
 .scroll-slide-right-a {
 	right: 0;
 	bottom: -100%;
-	background: asset-url('scroll-slide-right-a.png') no-repeat;
+	background: asset-url('scroll-slide-right-a.jpg') no-repeat center top;
 	background-size: cover;
 }
 
 .scroll-slide-right-b {
 	right: 0;
 	bottom: -100%;
-	background: asset-url('scroll-slide-right-b.png') no-repeat;
+	background: asset-url('scroll-slide-right-b.jpg') no-repeat center top;
 	background-size: cover;
 }
 
