--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -35,6 +35,12 @@ body { overflow: auto; }
 		background: #181b1e;
 	}
 
+	.home-logo {
+		background: asset-url('home-logo.png') no-repeat center center;
+		width: 340px; height: 340px;
+		margin: 10% auto;
+	}
+
 	.home-bottom {
 		width: 100%; height: 230px;
 		background: #181b1e asset-url('page-layout-bottom.png') repeat-x center 95px;
@@ -42,7 +48,7 @@ body { overflow: auto; }
 
 		.home-actions {
 			background:  #181b1e;
-			width: 750px;
+			width: 800px;
 			margin-top: 90px;
 		}
 	}
@@ -70,6 +76,7 @@ body { overflow: auto; }
 	}
 
 	.login-form {
+		position: absolute; right: 50px; top: 50px;
 		width: 160px; height: 180px;
 		background: #4b4b4b;
 		border-radius: 4px;
@@ -95,7 +102,7 @@ body { overflow: auto; }
 
 	.button-link {
 		display: inline-block;
-		width: 160px;
+		width: 170px;
 		margin: 0 30px 0 30px;
 		font-size: 12px;
 		font-weight: bold;
