--- a/app/assets/stylesheets/prez.css.scss
+++ b/app/assets/stylesheets/prez.css.scss
@@ -16,7 +16,7 @@ body.body-home {
 	background-attachment: local;
 
 	header{
-		background: asset-url('logo.jpg') no-repeat center;
+		background: url(/assets/logo.png) no-repeat center;
 		background-color:#181b1e;
 		height:70px;
 		width:100%;
