--- a/app/views/movies/find.html.haml
+++ b/app/views/movies/find.html.haml
@@ -158,7 +158,7 @@
 			.content
 				%p Metropolis est une mégapole futuriste dans une société dystopique divisée en une ville haute, où vivent les familles intellectuelles dirigeantes, dans le luxe et le divertissement, et une ville basse, où les travailleurs font fonctionner la ville et sont opprimés par la classe dirigeante.
 				%p Maria, une femme de la ville basse, emmène clandestinement des enfants visiter la ville haute. Le groupe se fait repousser, mais Freder Fredersen, le fils du dirigeant de Metropolis, tombe amoureux d’elle. 
-				%p En descendant dans la ville basse pour la retrouver, il découvre l’atroce vie infligé aux ouvriers.
+				%p En descendant dans la ville basse pour la retrouver, il découvre l’atroce vie infligée aux ouvriers.
 
 			.discover-more
 
