--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -27,7 +27,7 @@ body { overflow: auto; }
 .home {
 	width: 100%; height: 100%;
 	position: absolute; top: 0;
-	background: #000 asset-url('home-bg.png') no-repeat center center;
+	background: #000 asset-url('home-bg.png') no-repeat center top;
 	background-size: cover;
 
 	.home-top {
@@ -47,9 +47,10 @@ body { overflow: auto; }
 		position: absolute; bottom: 0;
 
 		.home-actions {
-			background:  #181b1e;
-			width: 800px;
-			margin-top: 90px;
+			background:  #181b1e asset-url('home-bottom.png') no-repeat center top;
+			width: 650px;
+			margin-top: 30px;
+			padding-top: 60px;
 		}
 	}
 
@@ -77,16 +78,11 @@ body { overflow: auto; }
 
 	.login-form {
 		position: absolute; right: 50px; top: 50px;
-		width: 160px; height: 180px;
-		background: #4b4b4b;
+		width: 130px; height: 140px;
+		background: #161d24;
 		border-radius: 4px;
 		padding: 25px 15px 0 15px;
-	}
-
-	.home-actions {
-		text-transform: uppercase;
-		margin: 8% auto 0 auto;
-		text-align: center;
+		border: 1px solid #2f2c2c;
 
 		a#sign_in {
 			font-size: 9.5px;
@@ -94,17 +90,26 @@ body { overflow: auto; }
 			border: 1px solid $scope_blue;
 			color: #fff;
 			display: block;
-			margin: 40px auto;
-			width: 130px; 
+			margin: 20px auto;
+			width: 100px; 
 			font-family: 'Aller', sans-serif;
+			text-transform: uppercase;
 		}
+	}
+
+	.home-actions {
+		text-transform: uppercase;
+		margin: 8% auto 0 auto;
+		text-align: center;
+
+		
 	}
 
 	.button-link {
 		display: inline-block;
-		width: 170px;
-		margin: 0 30px 0 30px;
-		font-size: 12px;
+		width: 150px;
+		margin: 0 10px 0 10px;
+		font-size: 10px;
 		font-weight: bold;
 		height: 12px; padding-top: 8px;
 	}
