--- a/app/views/movies/watch.html.haml
+++ b/app/views/movies/watch.html.haml
@@ -1,6 +1,6 @@
 .player-wrapper
     %video.player#player(controls)
-        %source{ src: "/medias/film.m4v?v=#{Time.now.to_i}" , type: 'video/mp4' }
+        %source{ src: "/medias/film.m4v" , type: 'video/mp4' }
     
 
     .player-controls{ style:'display:none;'}
